Se corrige z-index en vectors, se soluciona bug al imprimir en printermap y se elimina capa de selección. Se activa por defecto conservar vista en georefimage y se reestructuran datos de infocoordinates

--- a/api-ign-js/src/plugins/vectors/src/facade/assets/css/vectors.css
+++ b/api-ign-js/src/plugins/vectors/src/facade/assets/css/vectors.css
@@ -2,8 +2,11 @@
   to { transform: rotate(360deg); }
 }
 
-/* Buttons */
+div.m-panel.m-vectors {
+  z-index: 99999 !important;
+}
 
+/* Buttons */
 div.m-panel.m-vectors.opened>button.m-panel-btn {
     background-color: #71a7d3 !important;
     font-family: 'g-cartografia' !important;
